assets/css/style.css
html {
  background: url(https://media.giphy.com/media/yEbMjEIeGqqDm/giphy.gif)
    no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 100%;
}

body {
  background-color: rgb(255, 255, 255, 0);
}

header {
  font-family: sans-serif;
  font-size: 40px;
  font-weight: normal;
  margin-top: 0.5em;
  margin-left: 0.5em;
}

#resetButton {
  display: none;
  margin-left: auto;
  margin-right: auto;
}

#hiddenTotoro {
  display: none;
  margin-left: auto;
  margin-right: auto;
  width: 60%;
}

#congratsTotoro {
  display: none;
  margin-left: auto;
  margin-right: auto;
}

.game {
  float: right;
  margin-right: 100px;
  font-family: fantasy;
  text-align: center;
  font-size: 40px;
  line-height: 2em;
  color: whitesmoke;
}

#hangman {
  float: left;
  color: rgba(238, 2, 2, 0.548);
  font-size: 45px;
  margin-left: 0.5em;
}

